force-app/main/default/objects/Innerduct__c/Innerduct__c.object-meta.xml
<CustomObject>
    <label>Innerduct</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Innerducts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>