force-app/main/default/objects/Innerduct__c/fields/A_Side__c.field-meta.xml
<CustomField>
    <fullName>A_Side__c</fullName>
    <description>Reference to the space that the Asset owner is originating from.</description>
    <label>A-Side</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>