force-app/main/default/objects/Innerduct__c/fields/A_Side_Data_Hall__c.field-meta.xml
<CustomField>
    <fullName>A_Side_Data_Hall__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Reference to the Data Hall that the Innerduct is originating from.</description>
    <label>A-Side - Data Hall</label>
    <referenceTo>DC_Data_Hall__c</referenceTo>
    <relationshipLabel>Innerducts</relationshipLabel>
    <relationshipName>Innerducts</relationshipName>
    <type>Lookup</type>
</CustomField>