force-app/main/default/objects/Innerduct__c/fields/A_Side_POE_Allocation__c.field-meta.xml
<CustomField>
    <fullName>A_Side_POE_Allocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>A-Side POE Allocation</label>
    <referenceTo>DC_POE_Allocation__c</referenceTo>
    <relationshipLabel>Innerducts (A-Side POE Allocation)</relationshipLabel>
    <relationshipName>Innerducts1</relationshipName>
    <type>Lookup</type>
</CustomField>