force-app/main/default/objects/Innerduct__c/fields/A_Side_Type__c.field-meta.xml
<CustomField>
    <fullName>A_Side_Type__c</fullName>
    <label>A-Side Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Hall</fullName>
            </value>
            <value>
                <fullName>POE Allocation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>