force-app/main/default/objects/Innerduct__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Asset allocated to this Innerduct.</description>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Innerducts</relationshipLabel>
    <relationshipName>Innerducts</relationshipName>
    <type>Lookup</type>
</CustomField>