force-app/main/default/objects/Innerduct__c/fields/Fiber_Count__c.field-meta.xml
<CustomField>
    <fullName>Fiber_Count__c</fullName>
    <description>The number of fibers contained within this innerduct.</description>
    <label>Fiber Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>