force-app/main/default/objects/Innerduct__c/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <description>The ID of the innerduct used for identifying it within the Inside Plant.</description>
    <label>ID</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>