force-app/main/default/objects/Innerduct__c/fields/Inside_Plant__c.field-meta.xml
<CustomField>
    <fullName>Inside_Plant__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Inside Plant</label>
    <referenceTo>DC_Inside_Plant__c</referenceTo>
    <relationshipLabel>Innerducts</relationshipLabel>
    <relationshipName>Innerducts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>