force-app/main/default/objects/Innerduct__c/fields/POE_Allocation__c.field-meta.xml
<CustomField>
    <fullName>POE_Allocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the POE Allocation that the Innerduct is trying to get to.</description>
    <label>POE Allocation</label>
    <referenceTo>DC_POE_Allocation__c</referenceTo>
    <relationshipLabel>Innerducts</relationshipLabel>
    <relationshipName>Innerducts</relationshipName>
    <type>Lookup</type>
</CustomField>