force-app/main/default/objects/Innerduct__c/fields/Related_MRI_Suite_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_MRI_Suite_ID__c</fullName>
    <description>The MRI Suite ID from asset related to this Innerduct.</description>
    <formula>HYPERLINK(&apos;/&apos; &amp;   Asset__r.Id, Asset__r.MRI_Suite_ID__c, &quot;_self&quot;)</formula>
    <label>Related MRI Suite ID</label>
    <type>Text</type>
</CustomField>