force-app/main/default/objects/Innerduct__c/fields/Z_Side__c.field-meta.xml
<CustomField>
    <fullName>Z_Side__c</fullName>
    <description>Reference to the space that the Asset owner is trying to get to.</description>
    <label>Z-Side</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>