force-app/main/default/objects/Innerduct__c/fields/Z_Side_Data_Hall__c.field-meta.xml
<CustomField>
    <fullName>Z_Side_Data_Hall__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Data Hall that the Innerduct is trying to get to.</description>
    <label>Z-Side - Data Hall</label>
    <referenceTo>DC_Data_Hall__c</referenceTo>
    <relationshipLabel>Innerducts (Z-Side - Data Hall)</relationshipLabel>
    <relationshipName>Innerducts1</relationshipName>
    <type>Lookup</type>
</CustomField>